--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
-    
     <div id = "clients-section-wrapper">
         <div id = "clients-wrapper">
-            <div class ="client-container">
+            <div class ="client-container" id="client-container-1">
                 <img src="./assets/client-logos/Black-Skyline-Logo.png" alt="Skyline Logo">
             </div>
             <div class ="client-container">
@@ -87,9 +86,26 @@ Original Events, only 100 passes avaliable!">
             <div class ="client-container">
                 <img src="./assets/client-logos/Clients-Lost-Logo-Dark.png" alt="Lost Paradise Logo">
             </div>
-            <div class ="client-container">
+            <div class ="client-container" id="client-container-4">
                 <img src="./assets/client-logos/College-Logo-Dark-Logo%20Copy.png" alt="College Party Logo">
             </div>
+        </div>
+    </div>
+    <div id="whats-included-section-wrapper">
+        <div id = "whats-included-wrapper">
+            <div id ="whats-inluded-left-wrapper">
+                <img src="./assets/campus-virtual-pass-info-section.png" alt="Campus Virual Pass">
+            </div>
+            <div id ="whats-inluded-right-wrapper">
+                <div id = "whats-included-content-container">
+                    <h2>What's included</h2>
+                    <p>Get unlimited free access to Campus Events hosted by us and a variety of partners in your city. We only put on the best events, so expect social and nightlife experiences that foster unforgettable memories. Socialise with other students while saving the pennies with our pass!</p>
+                    <img src="./assets/triangle-shape-1.svg">
+                </div>
+            </div>
+        </div>
+        <div id ="be-quick-wrapper">
+            
         </div>
     </div>
 <!--    <script src="js/scripts.js"></script>-->
