--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@ Original Events, only 100 passes avaliable!">
                     </form>
                 </div>
                 <div id="countdown-clock-wrapper">
-                    <div class="countdown-timestamp-container"id="days-container">
+                    <div class="countdown-timestamp-container days-container">
                         <h3>59</h3>
                         <h4>Days</h4>
                     </div>
-                    <div class="countdown-timestamp-container" id="hours-container">
+                    <div class="countdown-timestamp-container hours-container">
                         <h3>17</h3>
                         <h4>Hours</h4>
                     </div>
-                    <div class="countdown-timestamp-container" id="minutes-container">
+                    <div class="countdown-timestamp-container minutes-container">
                         <h3>56</h3>
                         <h4>Minutes</h4>
                     </div>
-                    <div class="countdown-timestamp-container" id="seconds-container">
+                    <div class="countdown-timestamp-container seconds-container">
                         <h3>13</h3>
                         <h4>Seconds</h4>
                     </div>
@@ -104,10 +104,37 @@ Original Events, only 100 passes avaliable!">
                 </div>
             </div>
         </div>
-        <div id ="be-quick-wrapper">
-            
+    </div>
+    <div id ="be-quick-section-wrapper">
+        <div id = "be-quick-wrapper">
+            <div id ="be-quick-left-wrapper">
+                <div id ="be-quick-content-container">
+                    <h2>Be quick!</h2>
+                    <p>With our selection of experiences, we are limiting our FREE Campus Events Passes to 50 students. Make sure you join before the offer expires on September 1st.</p>
+                </div>
+                <div id="countdown-clock-wrapper-2">
+                    <div class="countdown-timestamp-container days-container">
+                        <h3>59</h3>
+                        <h4>Days</h4>
+                    </div>
+                    <div class="countdown-timestamp-container hours-container">
+                        <h3>17</h3>
+                        <h4>Hours</h4>
+                    </div>
+                    <div class="countdown-timestamp-container minutes-container">
+                        <h3>56</h3>
+                        <h4>Minutes</h4>
+                    </div>
+                    <div class="countdown-timestamp-container seconds-container">
+                        <h3>13</h3>
+                        <h4>Seconds</h4>
+                    </div>
+                </div>
+            </div>
+            <div id ="be-quick-right-wrapper">
+                <img src="./assets/be-quick-graphic.png" alt="Campus Events Showcase">
+            </div>
         </div>
     </div>
-<!--    <script src="js/scripts.js"></script>-->
 </body>
 </html>
