--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -134,6 +133,41 @@ Original Events, only 100 passes avaliable!">
             <div id ="be-quick-right-wrapper">
                 <img src="./assets/be-quick-graphic.png" alt="Campus Events Showcase">
             </div>
+        </div>
+    </div>
+    <div id="the-process-section-wrapper">
+        <div id="the-process-content-wrapper">
+            <div id ="process-heading-container">
+                <h1>What's the process?</h1>
+            </div>
+            <div id ="process-step-1" class ="process-container">
+                <img src="./assets/sign-up-icon.svg" alt="Sign Up Icon">
+                <h6>01</h6>
+                <h5>Sign up</h5>
+                <p>Sign up using the form above with your name, email and uni to get access to our pass.</p>
+            </div>
+            <div id ="process-step-2" class ="process-container">
+                <img src="./assets/digital-pass-icon.svg" alt="Get Digital Pass Icon">
+                <h6>02</h6>
+                <h5>Get digital pass</h5>
+                <p>Expect an email from us with your digital pass and how to use it at our upcoming events.</p>
+            </div>
+            <div id ="process-step-3" class ="process-container">
+                <img src="./assets/attend-events-icon.svg" alt="Attend Events Icon">
+                <h6>03</h6>
+                <h5>Attend events</h5>
+                <p>We will send you information on upcoming events where you can attend using our pass.</p>
+            </div>
+        </div>
+    </div>
+    <div id="meetup-platform-section-wrapper">
+        <div id = "meetup-platform-title-container">
+            <h4>Coming soon...</h4>
+            <h1>Campus student meetup platform</h1>
+            <img src="./assets/triangle-shape-3.svg" alt="Triangle Shape 3">
+        </div>
+        <div id = "meetup-platform-image-container">
+            <img src="./assets/meetup-platform-graphic.png" alt="Meetup platform graphic">
         </div>
     </div>
 </body>
