--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@ Original Events, only 100 passes avaliable!">
   <meta name="author" content="Campus">
   <link rel="stylesheet" href="./styles.css">
 </head>
-
 <body>
     <div id="hero-wrapper">
         <div id = "left-hero-wrapper">
@@ -164,11 +163,41 @@ Original Events, only 100 passes avaliable!">
         <div id = "meetup-platform-title-container">
             <h4>Coming soon...</h4>
             <h1>Campus student meetup platform</h1>
-            <img src="./assets/triangle-shape-3.svg" alt="Triangle Shape 3">
         </div>
         <div id = "meetup-platform-image-container">
-            <img src="./assets/meetup-platform-graphic.png" alt="Meetup platform graphic">
+            <img src="./assets/meetup-platform-graphic.png" alt="Meetup Platform Graphic">
+        </div>
+        <div id = "meetup-platform-image-container-mobile">
+            <img src="./assets/meetup-platform-graphic-mobile.png" alt="Meetup Platform Graphic Mobile">
         </div>
     </div>
+    <div id ="we-work-with-section-wrapper">
+        <div id = "we-work-with-title-container">
+            <h1>We work with</h1>
+        </div>
+        <div id = "client-logo-container-1" class= "client-logo-contianer">
+            <img src="./assets/we-work-wth-logos/JD-Logo-Dark-Large%20Copy.png" alt="DJ Logo">
+        </div>
+        <div id = "client-logo-container-2" class= "client-logo-contianer">
+            <img src="./assets/we-work-wth-logos/New-Look-Dark-Logo%20Copy.png" alt="New Look Logo">
+        </div>
+        <div id = "client-logo-container-3" class= "client-logo-contianer">
+            <img src="./assets/we-work-wth-logos/Bitmap%20Copy.png" alt="Capeesh Logo">
+        </div>
+        <div id = "client-logo-container-4" class= "client-logo-contianer">
+            <img src="./assets/we-work-wth-logos/Tiger-Tiger-Transparenet%20Copy.png" alt="TigerTiger Logo">
+        </div>
+    </div>
+    
+    <footer>
+        <div id="footer-content-container">
+            <div id="footer-content-top">
+                <p>If you would like to enqire about Campus or our events please email us at: hello@campusevents.co<p>
+            </div>
+            <div id="footer-content-bottom">
+                <p>We take data protection law seriously, so below we have set out exactly how and why we use your information, and what our legal basis is to be able to use your information in each way. By requesting a free Campus Events Pass you agree to open a student account with us. We intend to use your email for essential marketing purposes such as updating you with the latest student events and offers. The pass is a digital ticket that can be used at accredited Campus Original and patner events. You will be sent information on what events are avaliable in your city. To reedem entry simply show your pass to the ticket desk for free access. This offer expires on September 1st. You will be able to access our accredited events with this pass until January 2021 where a different method of entry will be requird. For futher details on our privacy policy please see: <br><a href"https://campusevents.co/privacypolicy/">campusevents.co/privacypolicy/</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
