--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 Original Events, only 100 passes avaliable!">
   <meta name="author" content="Campus">
   <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 <body>
-    <div id="hero-wrapper">
+    <div id="hero-wrapper" class="top-level-wrapper">
         <div id = "left-hero-wrapper">
             <div id="pass-content-wrapper">
                 <div id="pass-main-info">
@@ -73,7 +74,7 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
-    <div id = "clients-section-wrapper">
+    <div id = "clients-section-wrapper" class="top-level-wrapper">
         <div id = "clients-wrapper">
             <div class ="client-container" id="client-container-1">
                 <img src="./assets/client-logos/Black-Skyline-Logo.png" alt="Skyline Logo">
@@ -89,7 +90,7 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
-    <div id="whats-included-section-wrapper">
+    <div id="whats-included-section-wrapper" class="top-level-wrapper">
         <div id = "whats-included-wrapper">
             <div id ="whats-inluded-left-wrapper">
                 <img src="./assets/campus-virtual-pass-info-section.png" alt="Campus Virual Pass">
@@ -103,7 +104,7 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
-    <div id ="be-quick-section-wrapper">
+    <div id ="be-quick-section-wrapper" class="top-level-wrapper">
         <div id = "be-quick-wrapper">
             <div id ="be-quick-left-wrapper">
                 <div id ="be-quick-content-container">
@@ -134,7 +135,7 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
-    <div id="the-process-section-wrapper">
+    <div id="the-process-section-wrapper" class="top-level-wrapper">
         <div id="the-process-content-wrapper">
             <div id ="process-heading-container">
                 <h1>What's the process?</h1>
@@ -159,7 +160,7 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
-    <div id="meetup-platform-section-wrapper">
+    <div id="meetup-platform-section-wrapper" class="top-level-wrapper">
         <div id = "meetup-platform-title-container">
             <h4>Coming soon...</h4>
             <h1>Campus student meetup platform</h1>
@@ -171,7 +172,7 @@ Original Events, only 100 passes avaliable!">
             <img src="./assets/meetup-platform-graphic-mobile.png" alt="Meetup Platform Graphic Mobile">
         </div>
     </div>
-    <div id ="we-work-with-section-wrapper">
+    <div id ="we-work-with-section-wrapper" class="top-level-wrapper">
         <div id = "we-work-with-title-container">
             <h1>We work with</h1>
         </div>
