--- a/index.html
+++ b/index.html
@@ -74,15 +74,18 @@ Original Events, only 100 passes avaliable!">
             </div>
         </div>
     </div>
+    <div id="right-hero-wrapper-mobile">
+        <img src="./assets/mobile-pass-graphic-1.3.png" alt="Mobile Hero Pass Graphic">
+    </div>
     <div id = "clients-section-wrapper" class="top-level-wrapper">
         <div id = "clients-wrapper">
             <div class ="client-container" id="client-container-1">
                 <img src="./assets/client-logos/Black-Skyline-Logo.png" alt="Skyline Logo">
             </div>
-            <div class ="client-container">
+            <div class ="client-container" id="client-container-2">
                 <img src="./assets/client-logos/Logo-Frat-Bath-White.png" alt="Frat Bath Logo">
             </div>
-            <div class ="client-container">
+            <div class ="client-container" id="client-container-3">
                 <img src="./assets/client-logos/Clients-Lost-Logo-Dark.png" alt="Lost Paradise Logo">
             </div>
             <div class ="client-container" id="client-container-4">
