--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!--    <meta name="viewport" content="width=500, initial-scale=1">-->
   <title>Campus Events Pass</title>
   <meta name="description" content="Free access to Campus 
 Original Events, only 100 passes avaliable!">
