--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Original Events, only 100 passes avaliable!">
                         <input type="text" class="text-input-form" id="first-name" name="first-name" value="First name"><br>
                         <input type="text" class="text-input-form" id="last-name" name="last-name" value="Email"><br>
                         <input type="text" class="text-input-form" id="university" name="university" value="University"><br>
-                        <input type="submit" id="form-submit-button" value="Get access">
+                        <input type="submit" id="form-submit-button" value="">
                     </form>
                 </div>
                 <div id="countdown-clock-wrapper">
@@ -146,19 +146,19 @@ Original Events, only 100 passes avaliable!">
                 <h1>What's the process?</h1>
             </div>
             <div id ="process-step-1" class ="process-container">
-                <img src="./assets/sign-up-icon.svg" alt="Sign Up Icon">
+                <img src="./assets/sign-up-icon-revised.svg" alt="Sign Up Icon">
                 <h6>01</h6>
                 <h5>Sign up</h5>
                 <p>Sign up using the form above with your name, email and uni to get access to our pass.</p>
             </div>
             <div id ="process-step-2" class ="process-container">
-                <img src="./assets/digital-pass-icon.svg" alt="Get Digital Pass Icon">
+                <img src="./assets/digital-pass-icon-revised.svg" alt="Get Digital Pass Icon">
                 <h6>02</h6>
                 <h5>Get digital pass</h5>
                 <p>Expect an email from us with your digital pass and how to use it at our upcoming events.</p>
             </div>
             <div id ="process-step-3" class ="process-container">
-                <img src="./assets/attend-events-icon.svg" alt="Attend Events Icon">
+                <img src="./assets/attend-events-icon-revised.svg" alt="Attend Events Icon">
                 <h6>03</h6>
                 <h5>Attend events</h5>
                 <p>We will send you information on upcoming events where you can attend using our pass.</p>
@@ -171,10 +171,10 @@ Original Events, only 100 passes avaliable!">
             <h1>Campus student meetup platform</h1>
         </div>
         <div id = "meetup-platform-image-container">
-            <img src="./assets/meetup-platform-graphic.png" alt="Meetup Platform Graphic">
+            <img src="./assets/meetup-platform-graphic-revised.png" alt="Meetup Platform Graphic">
         </div>
         <div id = "meetup-platform-image-container-mobile">
-            <img src="./assets/meetup-platform-graphic-mobile.png" alt="Meetup Platform Graphic Mobile">
+            <img src="./assets/meetup-platform-graphic-mobile-revised.png" alt="Meetup Platform Graphic Mobile">
         </div>
     </div>
     <div id ="we-work-with-section-wrapper" class="top-level-wrapper">
